Update java options for earlier failure during misconfiguration
Signed-off-by: Andre Kurait <akurait@amazon.com>